# Derivation-Web

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  INTEGRATION.md  INTEGRATION_BOT.md  INTEGRATION_OSF.md  Makefile  NOTES.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
FAILURES/: jinja_template_response_signature.md
deploy/nginx/: dw-rate-limit.conf  dw.domlynch.com.conf  provenance.researka.org.conf
deploy/scripts/: dw-backup.sh
deploy/systemd/: certbot-dw.service  certbot-dw.timer  derivation-web.service  dw-backup.service  dw-backup.timer
derivation_web/api/: app.py  audit.py  auth.py  routes.py  views.py
derivation_web/core/: __init__.py  canonical.py  graph.py  hashing.py  models.py  signing.py
derivation_web/db/: repo.py  schema.py  session.py
derivation_web/tools/: issue_key.py
derivation_web/web/templates/: artifact.html  base.html  chain.html  index.html
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_api_keys.py
scripts/: dw_producer.py
tests/: conftest.py  test_api.py  test_auth.py  test_canonical.py  test_dw_producer.py  test_graph.py  test_hashing.py  test_models.py  test_signing.py
